--- a/back-end/app/assets/stylesheets/developer.scss
+++ b/back-end/app/assets/stylesheets/developer.scss
@@ -2,6 +2,7 @@
 @import "font-awesome";
 @import "material_icons";
 @import "prism";
+@import "bootstrap-tagsinput";
 
 @import "./developer/main.scss";
 
