--- a/back-end/app/views/developer/snippets/_form.html.erb
+++ b/back-end/app/views/developer/snippets/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @snippet do |f| %>
+<%= form_for @snippet, id: 'snippet-form' do |f| %>
 <div class="focus-view-header" style="height: 54px">
   <div class="focus-view-header-name" style="width: 556px;">
     New Snippet
@@ -24,6 +24,7 @@
       <div class="gist-editor-container">
         <div class="gist-editor" id='editor'></div>
         <%= f.hidden_field :contents, id: 'editor-contents' %>
+        <%= f.hidden_field :tag_trigger, id: 'tags' %>
       </div>
     </div>
   </div>
@@ -32,6 +33,10 @@
 <% end %>
 
 <script type="text/javascript">
+$('#triggerTags').change(function(e){
+  debugger
+  $('#tags').val(e.target.value.replace(/,/g, ''));
+});
 $("#triggerTags").tagsinput({
   maxChars: 1,
   cancelConfirmKeysOnEmpty: false
