--- a/back-end/app/views/developer/snippets/_form.html.erb
+++ b/back-end/app/views/developer/snippets/_form.html.erb
@@ -34,7 +34,7 @@
 
 <script type="text/javascript">
 $('#triggerTags').change(function(e){
-  debugger
+  // debugger
   $('#tags').val(e.target.value.replace(/,/g, ''));
 });
 $("#triggerTags").tagsinput({
