--- a/back-end/app/views/layouts/developer.html.erb
+++ b/back-end/app/views/layouts/developer.html.erb
@@ -164,7 +164,7 @@
                         <%= snippet.name %>
                       </div>
                       <span class="gist-created-updated">
-                        <%= distance_of_time_in_words(Time.now, snippet.created_at) %>
+                        <%= distance_of_time_in_words(Time.now, snippet.updated_at ) %>
                       </span>
                     </div>
                     <div class="gist-flags">
