--- a/back-end/app/assets/stylesheets/developer/components/_sidebar.scss
+++ b/back-end/app/assets/stylesheets/developer/components/_sidebar.scss
@@ -48,13 +48,16 @@ ul.sidebar>li.sidebar-selected:hover {
 
 ul.sidebar>li.sidebar-new-gist {
     margin: 20px 0;
-
-    &>a {
-        color: inherit;
-        text-decoration: none;
-    }
 }
 
+ul.sidebar {
+    &>li {
+        &>a {
+            color: inherit;
+            text-decoration: none;
+        }
+    }
+}
 ul.sidebar>li.sidebar-my-gists, ul.sidebar>li.sidebar-group-gists {
     margin-top: 20px
 }
