--- a/back-end/app/views/developer/snippets/_form.html.erb
+++ b/back-end/app/views/developer/snippets/_form.html.erb
@@ -18,13 +18,13 @@
         <div class="gist-file-name">
           <%= f.text_field :name, class: 'gist-file-name-box normal-text', placeholder: 'Name of your snippet' %>
           <%= f.select :language_id, options_from_collection_for_select(Language.all, :id, :name), class: 'gist-file-language-chooser chzn-done form-control normal-text' %>
-          Triggers <input id="triggerTags" type="text" data-role="tagsinput"/>
+          <%= f.text_field :tag_trigger %>
         </div>
       </div>
       <div class="gist-editor-container">
         <div class="gist-editor" id='editor'></div>
         <%= f.hidden_field :contents, id: 'editor-contents' %>
-        <%= f.hidden_field :tag_trigger, id: 'tags' %>
+
       </div>
     </div>
   </div>
@@ -33,14 +33,7 @@
 <% end %>
 
 <script type="text/javascript">
-$('#triggerTags').change(function(e){
-  // debugger
-  $('#tags').val(e.target.value.replace(/,/g, ''));
-});
-$("#triggerTags").tagsinput({
-  maxChars: 1,
-  cancelConfirmKeysOnEmpty: false
-});
+
 var editor = ace.edit("editor");
   editor.setTheme("ace/theme/github");
   editor.getSession().setMode("ace/mode/ruby");
