--- a/back-end/app/assets/stylesheets/developer/layout/_splitGist.scss
+++ b/back-end/app/assets/stylesheets/developer/layout/_splitGist.scss
@@ -4,6 +4,7 @@
 }
 
 .split-gist {
+  display: block;
   position: relative;
   padding: 15px 15px 14px 15px;
   border-bottom: 1px solid #ddd;
@@ -14,14 +15,16 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  color: black;
 
-  &.gist-selected {
-    background: #f5f5f5;
+  &:hover {
+    text-decoration: none;
+    color: black;
     box-shadow: inset 1px 1px 3px #ddd;
   }
 
-  &.gist-hovered {
-    // background: #f5f5f5;
+  &.gist-selected {
+    background: #f5f5f5;
     box-shadow: inset 1px 1px 3px #ddd;
   }
 
