--- a/back-end/app/assets/stylesheets/developer/layout/_splitViewContent.scss
+++ b/back-end/app/assets/stylesheets/developer/layout/_splitViewContent.scss
@@ -1,101 +1,82 @@
-.split-view-content {
-    overflow: hidden
-}
+.focus-view-gist {
+  flex: 1;
+  overflow: auto;
 
-.split-view-content .focus-select-gist {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center
-}
-
-.split-view-content .focus-select-gist>i {
-    font-size: 80px;
-    color: #999
-}
-
-.split-view-content .focus-select-gist>h2 {
-    font-weight: 300;
-    color: #999
-}
-
-.split-view-content .focus-view-gist {
-    overflow: hidden
-}
-
-.split-view-content .focus-view-gist .focus-view-header {
+  .focus-view-header {
     position: relative;
     background: #f5f5f5;
     padding: 12px 14px 18px 14px;
-    border-bottom: 1px solid #ddd
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-name {
-    margin-top: 5px;
-    font-weight: bold;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-meta {
-    font-size: 11px;
-    line-height: 15px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-controls {
-    margin-top: 5px
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-controls::after {
-    content: ".";
-    visibility: hidden;
-    display: block;
-    height: 0;
-    clear: both
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-controls .focus-view-header-controls-left {
-    float: left
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-controls .focus-view-header-controls-right {
-    float: right
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-labels {
-    margin-top: 15px
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-right {
-    position: absolute;
-    top: 22px;
-    right: 13px
-}
-
-.split-view-content .focus-view-gist .focus-view-header .focus-view-header-right .focus-view-num-files {
-    margin-right: 3px;
-    font-size: 11px;
-    font-weight: bold
-}
-
-.split-view-content .focus-view-gist .focus-view-content {
-    overflow-y: auto
-}
-
-.split-view-content .focus-view-gist .focus-view-content .focus-view-description {
-    padding: 12px 14px 11px 14px;
     border-bottom: 1px solid #ddd;
-    font-weight: normal
-}
 
-.split-view-content .focus-view-gist .focus-view-content .focus-view-files-spinner {
-    margin-top: 40px
-}
+    .focus-view-header-name {
+      margin-top: 5px;
+      font-weight: bold;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
 
-.split-view-content .focus-view-gist .add-another-file {
+    .focus-view-header-meta {
+      font-size: 11px;
+      line-height: 15px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+
+    .focus-view-header-controls {
+      margin-top: 5px;
+
+      &::after {
+        content: ".";
+        visibility: hidden;
+        display: block;
+        height: 0;
+        clear: both;
+      }
+
+      .focus-view-header-controls-left {
+        float: left;
+      }
+
+      .focus-view-header-controls-right {
+        float: right;
+      }
+    }
+
+    .focus-view-header-labels {
+      margin-top: 15px;
+    }
+
+    .focus-view-header-right {
+      position: absolute;
+      top: 22px;
+      right: 13px;
+
+      .focus-view-num-files {
+        margin-right: 3px;
+        font-size: 11px;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .focus-view-content {
+    overflow-y: auto;
+
+    .focus-view-description {
+      padding: 12px 14px 11px 14px;
+      border-bottom: 1px solid #ddd;
+      font-weight: normal;
+    }
+
+    .focus-view-files-spinner {
+      margin-top: 40px;
+    }
+  }
+
+  .add-another-file {
     margin-top: 20px;
-    margin-left: 15px
+    margin-left: 15px;
+  }
 }
