--- a/back-end/app/assets/stylesheets/developer/layout/_splitview.scss
+++ b/back-end/app/assets/stylesheets/developer/layout/_splitview.scss
@@ -3,6 +3,40 @@
   flex: 1;
   position: relative;
 
+  .creator {
+    position: relative;
+    flex-shrink: 0;
+    display: flex;
+    padding: 10px;
+    background-color: #fcfcfc;
+    box-shadow: 0px 1px 3px #ddd;
+    z-index: 1;
+
+    .avatar-wrapper {
+      position: relative;
+      width: 70px;
+      height: 70px;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .info {
+      margin-top: 10px;
+      margin-left: 10px;
+
+      .name {
+        font-size: 16px;
+        margin: 0;
+      }
+
+      .snippet-count {
+        color: #999;
+      }
+    }
+  }
+
   .split-view-list {
     display: flex;
     flex-direction: column;
